activities index style, in a better place than it was. Added collapsible groups, subtle banner image, title card. Layout breaks at 768px, need to fix this

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,5 +44,5 @@ video {
 }
 
 body{
-  background-color: #dde8dc;
+  background-color: #EFEFEF;
 }
